# Generated by Django 4.2.24 on 2025-09-11 15:13

import django.core.validators
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Customer',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('document_type', models.CharField(choices=[('DNI', 'Documento Nacional de Identidad'), ('CE', 'Carnet de Extranjería'), ('PASSPORT', 'Pasaporte')], help_text='Type of identity document', max_length=10)),
                ('document_number', models.CharField(help_text='Document number without spaces or hyphens', max_length=20, validators=[django.core.validators.RegexValidator('^[A-Z0-9]+$', 'Only uppercase letters and numbers')])),
                ('first_names', models.CharField(help_text="Customer's first names", max_length=100)),
                ('last_names', models.CharField(help_text="Customer's last names", max_length=100)),
                ('email', models.EmailField(help_text="Customer's unique email", max_length=254, unique=True)),
                ('phone', models.CharField(help_text='Contact phone number', max_length=20, validators=[django.core.validators.RegexValidator('^\\+?[0-9\\-\\s]+$', 'Invalid phone format')])),
                ('birth_date', models.DateField(help_text='Date of birth')),
                ('address', models.TextField(help_text='Complete address')),
                ('created_at', models.DateTimeField(auto_now_add=True, help_text='Registration date in the system')),
                ('updated_at', models.DateTimeField(auto_now=True, help_text='Last data update')),
                ('status', models.CharField(choices=[('ACTIVE', 'Activo'), ('INACTIVE', 'Inactivo'), ('SUSPENDED', 'Suspendido')], default='ACTIVE', help_text='Current customer status', max_length=20)),
                ('version', models.PositiveIntegerField(default=1, help_text='Version for change control')),
            ],
            options={
                'verbose_name': 'Cliente',
                'verbose_name_plural': 'Clientes',
                'db_table': 'customers',
                'indexes': [models.Index(fields=['document_type', 'document_number'], name='idx_customer_document'), models.Index(fields=['email'], name='idx_customer_email'), models.Index(fields=['status'], name='idx_customer_status'), models.Index(fields=['created_at'], name='idx_customer_created_at')],
            },
        ),
        migrations.AddConstraint(
            model_name='customer',
            constraint=models.UniqueConstraint(fields=('document_type', 'document_number'), name='unique_customer_document'),
        ),
    ]
